# binary-comp

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: minimal-binary-comp.json
examples/reconstruction-mismatch-demo/: Makefile  README.md  binary-comp.json  build.sh
examples/reconstruction-mismatch-demo/code/: FUN_00401000.disassembled.txt  FUN_00401029.disassembled.txt  FUN_00401061.disassembled.txt  FUN_0040109E.disassembled.txt  FUN_004010E8.disassembled.txt  FUN_00401161.disassembled.txt  FUN_00401185.disassembled.txt  FUN_00401199.disassembled.txt  FUN_00401220.disassembled.txt  FUN_00401250.disassembled.txt  FUN_00401280.disassembled.txt  FUN_004012B0.disassembled.txt  FUN_004012E0.disassembled.txt  FUN_00401304.disassembled.txt  FUN_004013AE.disassembled.txt  FUN_004013D1.disassembled.txt  FUN_00401400.disassembled.txt  FUN_00401440.disassembled.txt  FUN_00401450.disassembled.txt  FUN_00401460.disassembled.txt  FUN_00401470.disassembled.txt  FUN_004014D0.disassembled.txt  FUN_00401510.disassembled.txt  FUN_004015B0.disassembled.txt  FUN_00401690.disassembled.txt  FUN_00401700.disassembled.txt  (+66 more)
ghidra_scripts/: ExportToCompile.java
src/binary_comp/: __init__.py  cli.py  config.py
tests/: conftest.py  test_core.py  test_data.py  test_disasm.py  test_exepack.py  test_export_asm.py  test_function_compare.py  test_ghidra_script_compile.py  test_global_access.py  test_mz.py  test_rebuilt_vtables.py  test_report.py  test_seh.py  test_source_and_values.py  test_tp_overlay.py  test_tpu.py  test_tpu_scan.py  test_values_alignment.py
(+41 files in other folders)
