[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "binary-comp"
version = "0.1.0"
description = "Binary comparison and verification tools for reimplementation projects"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "binary-comp contributors" }
]
dependencies = []

[project.optional-dependencies]
capstone = ["capstone>=5"]
cpp = ["tree-sitter>=0.20", "tree-sitter-cpp>=0.20"]
all = ["capstone>=5", "tree-sitter>=0.20", "tree-sitter-cpp>=0.20"]

[project.scripts]
binary-comp = "binary_comp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/binary_comp"]
